# confidante

./: .gitignore  Cargo.toml  README.md  notes.txt
confidante/: Cargo.toml
confidante-backend/: Cargo.toml
confidante-backend/src/: lib.rs  settings.rs  store.rs
confidante-backend/src/store/: fake.rs  sqlite.rs
confidante-core/: Cargo.toml
confidante-core/src/: lib.rs  xml.rs
confidante-core/src/utils/: recorder.rs
confidante-core/src/xml/: stream_writer.rs
confidante-core/src/xml/stream_parser/: rusty_xml.rs
confidante-core/src/xmpp/: jid.rs  stanza.rs  stream.rs
confidante-inbound/: Cargo.toml
confidante-inbound/src/: bind.rs  connection.rs  lib.rs  sasl.rs  starttls.rs
confidante-inbound/src/connection/: debug.rs  tcp.rs
confidante-inbound/src/sasl/: common.rs  plain.rs  scram.rs
confidante-outbound/: Cargo.toml
confidante-services/: Cargo.toml
confidante-services/src/: router.rs
confidante/src/: main.rs
config/: defaults.yml  overrides.yml
db/migrations/: 20240811144023_create_users_table.up.sql
src/: client_session.rs  inbound.rs  inbound_session.rs  jid.rs  main.rs  services.rs  settings.rs  types.rs  xml.rs  xml_stream_codec.rs  xml_stream_parser.rs  xmpp.rs
src/inbound/: bind.rs  connection.rs  sasl.rs  session.rs  starttls.rs  tls.rs
src/inbound/connection/: debug.rs  tcp.rs
src/inbound/sasl/: plain.rs  scram.rs
src/inbound_session/: bind.rs  connection.rs  mod.rs  sasl.rs  session.rs
src/services/: router.rs  store.rs
src/services/store/: fake.rs  sqlite.rs
src/utils/: recorder.rs
src/xml/: namespaces.rs  rusty_xml_stream_parser.rs  stream_parser.rs  stream_writer.rs
src/xml/stream_parser/: rusty_xml.rs
src/xmpp/: jid.rs  stanza.rs  stream.rs  stream_header.rs
