[package]
name = "confidante"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
anyhow = "1.0.86"
base64 = "0.22.1"
bytes = "1.7.1"
config = { version = "0.14.0", features = ["yaml"] }
digest = "0.10.7"
futures = "0.3.30"
pin-project = "1.1.5"
quick-xml = "0.36.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.6"
rustls = "0.23.12"
rustyxml = { package = "RustyXML", version = "0.3.0" }
sha1 = "0.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_with = "3.9.0"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.15"
uuid = { version = "1.10.0", features = ["v4"] }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2.1.3"
password-hash = "0.5.0"
sha2 = "0.10.8"
scram-rs = { version = "0.13.1", features = ["use_ring"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
