[package]
name = "confidante-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
confidante-core = { path = "../confidante-core" }
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }                   # test only dependency
config = { version = "0.15.11", features = ["yaml"] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
