[package]
name = "confidante-inbound"
version = "0.1.0"
edition = "2024"

[dependencies]
confidante-backend = { path = "../confidante-backend" }    # get rid of this coupling
confidante-core = { path = "../confidante-core" }
confidante-services = { path = "../confidante-services" }  # invert dependency on router
anyhow = "1.0.98"                                          # get rid of this dependency. it makes reuse hard
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
password-hash = "0.5.0"
scram-rs = { version = "0.13.2", features = ["use_ring"] }
thiserror = "1.0.69"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
uuid = { version = "1.16.0", features = ["v4"] }
