[package]
name = "confidante"
version = "0.1.0"
edition = "2024"

[dependencies]
confidante-backend = { path = "../confidante-backend" }
confidante-core = { path = "../confidante-core" }
confidante-inbound = { path = "../confidante-inbound" }
confidante-services = { path = "../confidante-services" }
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
